@@ -32,7 +32,6 @@ apr_status_t apr_unix_file_cleanup(void *thefile)
     apr_status_t flush_rv = APR_SUCCESS, rv = APR_SUCCESS;
 
     if (file->buffered) {
-        /* XXX: flush here is not mutex protected */
         flush_rv = apr_file_flush(file);
     }
     if (close(file->filedes) == 0) {
@@ -123,7 +122,7 @@ APR_DECLARE(apr_status_t) apr_file_open(apr_file_t **new,
 #if APR_HAS_THREADS
     if ((flag & APR_BUFFERED) && (flag & APR_XTHREAD)) {
         rv = apr_thread_mutex_create(&thlock,
-                                     APR_THREAD_MUTEX_DEFAULT, pool);
+                                     APR_THREAD_MUTEX_NESTED, pool);
         if (rv) {
             return rv;
         }
@@ -247,7 +246,7 @@ APR_DECLARE(apr_status_t) apr_os_file_put(apr_file_t **file,
         if ((*file)->flags & APR_XTHREAD) {
             apr_status_t rv;
             rv = apr_thread_mutex_create(&((*file)->thlock),
-                                         APR_THREAD_MUTEX_DEFAULT, pool);
+                                         APR_THREAD_MUTEX_NESTED, pool);
             if (rv) {
                 return rv;
             }
