@@ -1,5 +1,8 @@
 Changes for APR 1.3.0
 
+  *) Improve thread safety of assorted file_io functions.
+     PR 42400.  [Davi Arnaut <davi haxent.com.br>]
+
   *) Fix deadlock in apr_file_gets() for a file opened with both the
      APR_BUFFERED and APR_XTHREAD flags.  [Bojan Smojver, Joe Orton]
 
